{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 5,
  "lineage": "d9225a12-a0e7-c032-f339-e1281762ab19",
  "resources": [
    {
      "mode": "data",
      "type": "aws_security_group",
      "name": "default_sec_grp",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468406663760:security-group/sg-0c5821349a262256e",
            "description": "default VPC security group",
            "filter": null,
            "id": "sg-0c5821349a262256e",
            "name": "default",
            "tags": {
              "Name": "default-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0c1080e22e4127001"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:468406663760:vpc/vpc-0c1080e22e4127001",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-0c2b3fedc86dcf06a",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-0c70fdfcd99f13bdd",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0c1080e22e4127001",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-06edbf7d184bb2fc9",
            "owner_id": "468406663760"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "kong_in_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "kong in rule",
            "from_port": 8000,
            "id": "sgrule-674703851",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c5821349a262256e",
            "security_group_rule_id": "sgr-013de2322a1e8536b",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 8000,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_security_group.default_sec_grp"
          ]
        }
      ]
    }
  ]
}